# auto-param-extraction

./: .gitignore  README.md
.devcontainer/: devcontainer.json
data/example/01_datasheet_table_simple_0_87bc95828b8e303cf4ddb569fd10ba485037193bb8c22c0ab22522e7aae58896/: gt_value.json  info.json  pdf_style_overwrite.json  schema.json
data/example/01_datasheet_table_simple_1_a1903161d48c3ced6e38e715e922f42e0826f9ba3414c04e377026a70c642941/: gt_value.json  info.json  pdf_style_overwrite.json
docker/: Dockerfile
meri/: pyproject.toml
meri/src/meri/: __init__.py  meri.py
meri/src/meri/configs/: __init__.py
meri/src/meri/extraction/: extractor.py  iterative_json_completion.py
meri/src/meri/layout/: __init__.py  layout_detector.py  settings.py
meri/src/meri/layout/pipeline/: pipeline.py
meri/src/meri/layout/pipeline_components/: __init__.py  add_pdf_info_component.py  drawings_detector_component.py  dummy_detector_component.py  image_detector_component.py  layout_detection_component.py  nms_component.py  utils.py  (+5 more)
meri/src/meri/transformation/: transformer.py
meri/src/meri/utils/: __init__.py  document_processing.py  format_handler.py  llm_extractor.py  llm_utils.py  prompts.py  pydantic_models.py  table_structure_recognizer.py  utils.py
meri_evaluation/: pyproject.toml
meri_evaluation/src/meri_evaluation/: cache.py  dataset.py  docling_extractor.py  evaluation.py  evaluator.py  logger_config.py  parameter_extractor.py  prompts.py  settings.py  utils.py  vanilla_llm.py
scripts/: run_evaluation.py
scripts/configs/: config_example.yaml  eval_opts.py
(+7 files in other folders)
